--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="navbarButton">Popular</button>
         <button class="navbarButton">Trending</button>
         <button class="navbarButton">Categories</button> -->
-        <a href="home.html" class="navbarButton">Home</a>
+        <a href="index.html" class="navbarButton">Home</a>
         <a href="new.html" class="navbarButton">New</a>
         <a href="popular.html" class="navbarButton">Popular</a>
         <a href="trending.html" class="navbarButton">Trending</a>
